# nepher-cli

./: .gitignore  README.md  pyproject.toml
src/nepher_cli/: __init__.py  __main__.py  cli.py  config.py  credentials.py  http_util.py  register_coldkey.py  submit.py
src/nepher_cli/commands/: __init__.py  account.py  envhub.py  hackathon.py  simstore.py  subnet.py  tournament.py
src/nepher_cli/core/: __init__.py  http.py
src/nepher_cli/envhub/: __init__.py  cache.py  config.py
src/nepher_cli/tournament/: __init__.py  agent_check.py  api.py  packer.py  wallet.py
tests/: test_config.py  test_http_util.py  test_submit_directories.py  test_submit_limits.py  test_submit_metadata.py  test_submit_quota_line.py
tests/core/: test_http.py
tests/envhub/: test_cache.py  test_envhub_config.py
