[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nepher-cli"
version = "0.2.0"
description = "npcli — unified Nepher command-line interface for accounts, hackathons, EnvHub, tournaments, and SimStore"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Nepher" }]
keywords = ["nepher", "bittensor", "hackathon", "envhub", "cli", "tournament", "subnet"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "httpx>=0.27.0",
  "rich>=13.7.0",
  "click>=8.1.0",
  "keyring>=25.0.0",
  "platformdirs>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.4.0",
]

[project.scripts]
npcli      = "nepher_cli.cli:main"
nepher-cli = "nepher_cli.cli:main"

[project.urls]
Homepage = "https://github.com/nepher-ai/nepher-cli"

[tool.hatch.build.targets.wheel]
packages = ["src/nepher_cli"]

[tool.hatch.build.targets.sdist]
include = ["src/nepher_cli", "README.md", "pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
